--- a/Krrli/HolographicAcademy-Holograms-101_sagekompi/Origami/Origami.csproj
+++ b/Krrli/HolographicAcademy-Holograms-101_sagekompi/Origami/Origami.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Assets\Holograms\Support\Underworld\UnderworldSound.cs" />
     <Compile Include="Assets\Scripts\GazeGestureManager.cs" />
     <Compile Include="Assets\Scripts\SphereCommands.cs" />
+    <Compile Include="Assets\Scripts\SphereSound.cs" />
     <Compile Include="Assets\Scripts\WorldCursor.cs" />
   </ItemGroup>
   <ItemGroup>
